# masterTank

./: .directory  .gitignore  README.md  catkin_build.sh  catkin_clean.sh  christian.sh  firstBuild.sh  install_rtabMap.sh  masterTank.desktop  patrick.sh  rebaseFromMaster.sh  start.sh  thor.sh
build_isolated/: catkin_make_isolated.cache
build_isolated/amcl/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  setup_custom_pythonpath.sh
build_isolated/base_local_planner/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  setup_custom_pythonpath.sh
build_isolated/carrot_planner/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/clear_costmap_recovery/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/costmap_2d/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  setup_custom_pythonpath.sh
build_isolated/driver_base/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/driver_common/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/dwa_local_planner/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  setup_custom_pythonpath.sh
build_isolated/fake_localization/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/frontier_exploration/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/global_planner/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  setup_custom_pythonpath.sh
build_isolated/hokuyo_node/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  setup_custom_pythonpath.sh
build_isolated/map_server/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/master_tank_navigation/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/move_base/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  setup_custom_pythonpath.sh
build_isolated/move_slow_and_clear/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/my_robot_name_2dnav/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/nav_core/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/navfn/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/navigation/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/robot_pose_ekf/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/rotate_recovery/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/rtabmap_ros/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  setup_custom_pythonpath.sh
build_isolated/timestamp_tools/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/voxel_grid/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
devel_isolated/amcl/: .catkin  .rosinstall  setup.sh
devel_isolated/base_local_planner/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel_isolated/carrot_planner/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel_isolated/clear_costmap_recovery/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel_isolated/costmap_2d/: .catkin  .rosinstall  setup.sh
devel_isolated/driver_base/: .catkin  .rosinstall  setup.sh
nbproject/: configurations.xml  project.xml
rtabmap/: CMakeLists.txt
src/: .directory  rtabmapRvis.launch
src/master_tank_navigation/: .directory  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
src/master_tank_navigation/include/: .directory  MasterTankExplore.h  MasterTankMain.h  MasterTankMarch.h  MasterTankMood.h  MasterTankMover.h  MasterTankObjectPlotter.h  masterTankCommon.h  mianTest.h
src/master_tank_navigation/include/frontier_exploration/: ExploreTaskAction.h  ExploreTaskActionFeedback.h  ExploreTaskActionGoal.h  ExploreTaskActionResult.h  ExploreTaskFeedback.h  ExploreTaskGoal.h  ExploreTaskResult.h  Frontier.h  GetNextFrontierRequest.h  GetNextFrontierResponse.h  UpdateBoundaryPolygonRequest.h  UpdateBoundaryPolygonResponse.h
src/master_tank_navigation/msg/: PointCloud2Object.msg
src/master_tank_navigation/src/: .directory  MasterTankExplore.cpp  MasterTankMain.cpp  MasterTankMarch.cpp  MasterTankMood.cpp  MasterTankMover.cpp  MasterTankObjectPlotter.cpp  mianTest.cpp  soundPlayer.py
src/moodnode/: CMakeLists.txt  README.md  install.rosinstall  package.xml
src/moodnode/include/: Sound.h  moodEnums.h  soundFiles.h
src/moodnode/launch/: mood.launch
src/moodnode/src/: Sound.cpp  main.cpp
src/smr_computer/: CMakeLists.txt  frames.gv  package.xml
src/smr_computer/launch/: smr.launch
src/smr_computer/rviz/: simple.rviz  smr.urdf
src/smr_computer/src/: connection_laser.cpp  keyboard.py  smr_control_node.cpp  smr_laser_node.cpp  tst_subscriber.cpp
src/visionnode/: CMakeLists.txt  README.md  install.rosinstall  package.xml
src/visionnode/data/: coke0.pcd  coke0_vfh.pcd  coke1.pcd  coke1_vfh.pcd  coke5.pcd  coke5_vfh.pcd  coke6.pcd  coke6_vfh.pcd  coke8.pcd  coke8_vfh.pcd  coke9.pcd  coke9_vfh.pcd  milk0.pcd  milk0_vfh.pcd  milk1.pcd  milk1_vfh.pcd  milk2.pcd  milk2_vfh.pcd  milk3.pcd  milk3_vfh.pcd  milk4.pcd  milk4_vfh.pcd  milk5.pcd  milk5_vfh.pcd  wine0.pcd  wine0_vfh.pcd  wine1.pcd  wine1_vfh.pcd  wine3.pcd  wine3_vfh.pcd
src/visionnode/include/: estimateVFH.h  euclidCluster.h  kinectMotors.h  nearestNeighbors.h
src/visionnode/launch/: buildClusters.launch  main.launch  mainGUI.launch
src/visionnode/msg/: PointCloud2Object.msg
src/visionnode/src/: buildClusters.cpp  build_tree.cpp  estimateVFH.cpp  euclidCluster.cpp  kinectMotors.cpp  main.cpp  nearestNeighbors.cpp
src/visionnode/tree/: kdtree.idx  training_data.h5  training_data.list
(+957 files in other folders)
